--- a/src/components/Browser/Browser.css
+++ b/src/components/Browser/Browser.css
@@ -1,12 +1,24 @@
 .browser-root {
     display: inline-block;
     position: relative;
-    width: 1000px;
-    height: 800px;
+    width: 50%;
+    height: 500px;
+    max-width: 100%;
     background-color: white;
     border-radius: 5px;
     border: 1px solid rgba(0, 7, 100, 0.5);
     top: 20px;
-    left: 30%;
-    resize: both;
+    left: 200px;
+    transition: all 0.2s;
+}
+
+.browser-root.close {
+    display: none;
+}
+
+.browser-root.fullscreen {
+    top: -25px;
+    left: 0px;
+    width: 100%;
+    height: 100vh;
 }
