--- a/src/components/Navigation/DropDown/DropDown.css
+++ b/src/components/Navigation/DropDown/DropDown.css
@@ -6,12 +6,13 @@
     display: block;
     border: none;
     outline: none;
+    font-size: 15px;
     background-color: inherit;
     height: inherit;
     padding: 0px 10px;
 }
 
-.dropdown-btn:focus{
+.dropdown-btn.clicked{
     background-color: rgb(22, 111, 245);
     color: white;
 }
@@ -34,7 +35,4 @@
     color: white;
 }
 
-.fuck{
-    background-color: red;
-}
 
