--- a/src/components/Navigation/DropDown/DropDown.css
+++ b/src/components/Navigation/DropDown/DropDown.css
@@ -12,10 +12,31 @@
     padding: 0px 10px;
 }
 
+.dropdown-icon-btn{
+    display: block;
+    border: none;
+    outline: none;
+    font-size: 15px;
+    background-image: url('../../../assets/icons/apple-black.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: inherit;
+    height: inherit;
+    padding: 0px 18px;
+}
+
 .dropdown-btn.clicked{
     background-color: rgb(22, 111, 245);
     color: white;
 }
+
+.dropdown-icon-btn.clicked{
+    background-image: url('../../../assets/icons/apple-white.svg');
+    background-color: rgb(22, 111, 245);
+    color: white;
+}
+
+
 
 .dropdown-list{
     background-color: rgba(255, 255, 255, 0.5);
@@ -33,6 +54,10 @@
 .dropdown-list > li:hover{
     background-color: rgb(22, 111, 245);
     color: white;
+}
+
+button img{
+    background-color: rebeccapurple;
 }
 
 
